<resources>
    <string name="app_name">ChatToYou</string>
    <string name="textViewName">Chat to You</string>
    <string name="shortDescription">Не самый быстрый мессенджер в мире. \nБесплатный и точка.</string>
    <string name="editMail">Почта</string>
    <string name="editPassword">Пароль</string>
    <string name="textViewRegistration">Регистрация</string>
    <string name="textViewForgotPassword">Забыл пароль</string>
    <string name="open">Открыть меню</string>
    <string name="close">Закрыть меню</string>
    <string name="resetPassword">Восстановление пароля</string>
    <string name="inputMail">Введите почту</string>
</resources>